# prototype-dependency-injection

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: dependency_injection.h
src/: CMakeLists.txt  dependency_injection.cpp
